crates/ffmpeg/src/snapshots/sonicmux_ffmpeg__command__tests__remux_arguments.snap
---
source: crates/ffmpeg/src/command.rs
expression: build.arguments()
---
[
    "-hide_banner",
    "-nostdin",
    "-y",
    "-progress",
    "pipe:1",
    "-stats_period",
    "0.25",
    "-nostats",
    "-copyts",
    "-i",
    "<INPUT>.mkv",
    "-map_metadata",
    "0",
    "-map_chapters",
    "0",
    "-copy_unknown",
    "-map",
    "0:0",
    "-map",
    "0:1",
    "-map",
    "0:2",
    "-map",
    "0:3",
    "-map",
    "0:4",
    "-c",
    "copy",
    "-disposition:0",
    "default",
    "-disposition:1",
    "future_flag",
    "-disposition:2",
    "default",
    "-disposition:3",
    "forced",
    "-disposition:4",
    "0",
    "-copytb",
    "1",
    "-avoid_negative_ts",
    "disabled",
    "-f",
    "matroska",
    "<STAGING>",
]
